fix: Graphs overflow when changing viewport size

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,7 @@ h2 {
   font-size: 27px;
   font-weight: 700;
 }
+
+canvas {
+  display: block;
+}
